modified notebook with new image_from_url()

--- a/Localization.ipynb
+++ b/Localization.ipynb
@@ -359,13 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "candidates = pickle.load(open(\"Data/validation_1.pkl\"))"
+    "candidates = pickle.load(open(\"Data/validation_10.pkl\"))"
    ]
   },
   {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -401,14 +401,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skipping Empty(White) Image\n"
+      "('n02104029', 'n02104029_1713', 222, 200, 'http://www.dierenplanet.nl/images/kuva2.jpg', 1, 164, 30, 151)\n",
+      "Some Error:  http://www.dierenplanet.nl/images/kuva2.jpg\n",
+      "Skip (222,200): n02104029_1713 : URL is bad.\n"
      ]
     }
    ],
    "source": [
-    "for ret in candidates[16:17]:\n",
+    "for ret in candidates[20:21]:\n",
     "    class_wnid,imgid,class_idx,xmlidx,url,xmin,xmax,ymin,ymax = ret\n",
-    "    im = image_from_url(url)\n",
+    "    print ret\n",
+    "    im = image_from_url(url) \n",
     "    if type(im) == types.NoneType:\n",
     "        print \"Skip (%d,%d): %s : URL is bad.\"%(class_idx,xmlidx,imgid)\n",
     "    elif np.mean(im)>=253:\n",
@@ -426,13 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import urllib2, os, tempfile\n",
+    "from socket import error as SocketError\n",
     "def image_from_url(url):\n",
     "  \"\"\"\n",
     "  Read an image from a URL. Returns a numpy array with the pixel data.\n",
@@ -450,8 +454,10 @@
     "    print 'URL Error: ', e.reason, url\n",
     "  except urllib2.HTTPError as e:\n",
     "    print 'HTTP Error: ', e.code, url\n",
-    "  except Error as e:\n",
-    "    print 'Some Error: ', e.code, url"
+    "  except ValueError as e:\n",
+    "    print 'Some Error: ', url\n",
+    "  except SocketError as e:\n",
+    "    print 'Some Error: ', url"
    ]
   },
   {
@@ -505,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
