Untracked .pyc and .so files, added another except clause in image_from_url

--- a/Localization.ipynb
+++ b/Localization.ipynb
@@ -370,13 +370,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import types"
+    "import types\n",
+    "from library.image_utils import *"
    ]
   },
   {
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -402,7 +403,7 @@
      "output_type": "stream",
      "text": [
       "('n02104029', 'n02104029_1713', 222, 200, 'http://www.dierenplanet.nl/images/kuva2.jpg', 1, 164, 30, 151)\n",
-      "Some Error:  http://www.dierenplanet.nl/images/kuva2.jpg\n",
+      "Socket Error:  http://www.dierenplanet.nl/images/kuva2.jpg\n",
       "Skip (222,200): n02104029_1713 : URL is bad.\n"
      ]
     }
